fix: update transition effect and visibility for hcservices buttons; adjust color variable for better contrast

--- a/src/styles/components/hcservices.scss
+++ b/src/styles/components/hcservices.scss
@@ -49,7 +49,7 @@
     background-size: contain;
     width: rem(60);
     height: rem(60);
-    transition: all 0.3s ease;
+    transition: opacity 0.3s ease;
     @include hover {
       opacity: 0.7;
     }
@@ -58,7 +58,7 @@
     }
 
     &.swiper-button-disabled {
-      display: none;
+      visibility: hidden;
     }
   }
   &__pagination {
