--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -35,10 +35,10 @@
 
 .big-title {
   font-size: fluid(60, 200);
-  color: var(--color-light);
+  color: var(--color-light-100);
   text-align: center;
   font-weight: 700;
-  line-height: 1; /* 100% */
+  line-height: 1;
 }
 
 .section {
